<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="322dp" >

        <ImageView
            android:id="@+id/AutorImg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/autor"
            android:src="@drawable/autor" />

        <TextView
            android:id="@+id/Autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AutorImg"
            android:text="@string/autor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Diemes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Emailc"
            android:layout_alignBaseline="@+id/Autor"
            android:layout_alignLeft="@+id/Email"
            android:text="@string/nomeAutor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/Emailc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Autor"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Chave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/Emailc"
            android:text="@string/chave"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Emailc"
            android:layout_toRightOf="@+id/Emailc"
            android:text="@string/endEmail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/rw5x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Chave"
            android:layout_alignLeft="@+id/Email"
            android:layout_toRightOf="@+id/Chave"
            android:text="@string/chaveAutor"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/texto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/Chave"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="0"
            android:shadowRadius="1"
            android:singleLine="false"
            android:text="@string/texto"
            android:textColor="#FF5500"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>